# backend-api

./: .env.example  .gitignore  Dockerfile  MIGRATION.md  README.md  alembic.ini  docker-compose.yml  init_db.py  pyproject.toml  railway.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/agents/: analysis_agent.py  base.py  curve_fitting_agent.py  experiment_agent.py  fallback_agent.py  hypothesis_agent.py  ml_models_agent.py  router.py  watcher_agent.py
app/core/: auth.py  config.py  deps.py  llm_config.py  session.py
app/db/: engine.py
app/graph/: checkpointer.py  interrupts.py  pipeline.py  state.py
app/llm/: providers.py
app/schemas/: __init__.py  api_models.py
app/services/: agent_headless.py  agent_registry.py  agent_runner.py  analysis_service.py  llm_runtime.py  (+19 more)
config/: literature_agent.json  polaris_literature_agent_manifest.json
data/: experiment_memory.json  polaris.db-shm
docs/: DEPLOY-RAILWAY.md
literature_agent/: requirements.txt
migrations/: env.py
scripts/: briefcase_build.ps1  briefcase_build.sh  mcp_orchestrator_process_smoke.ps1  mcp_orchestrator_process_smoke.sh  mcp_orchestrator_smoke.ps1  mcp_orchestrator_smoke.sh  migrate_sqlite_to_postgres.py  railway-start.sh  start.sh
tests/: test_curve_fitting_exports.py  test_curve_fitting_plots.py  test_experiment_service.py  test_json_safe.py  test_literature_agent_service.py  test_literature_api.py  test_manual_paper_store.py  test_mcp_orchestrator_logic.py  test_ml_dual_config.py  test_spectral_csv_format.py  test_workflow_followups.py
(+87 files in other folders)
