[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polaris-backend-api"
version = "1.0.0"
description = "POLARIS FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.12",
  "PyJWT>=2.9.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "psycopg[binary]>=3.2.0",
  "numpy",
  "pandas",
  "openpyxl",
  "matplotlib",
  "scipy",
  "lmfit",
  "google-generativeai",
  "openai>=1.0.0",
  "scikit-learn",
  "requests",
  "watchdog",
  "reportlab",
  "psutil",
  "plotly",
  "pillow",
  "httpx>=0.28.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-google-genai>=2.0.0",
  "langgraph>=0.2.0",
  "langgraph-checkpoint-sqlite>=1.0.0",
  "streamlit>=1.36.0",
]

[project.optional-dependencies]
ml = ["torch", "transformers"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.8.0", "httpx>=0.28.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
